// DBML diagram for Expo + Supabase Multi-Tenant Starter
// Paste at https://dbdiagram.io/d to view ER diagram

Table organizations {
  id uuid [pk]
  name text [not null]
  slug text [not null, unique]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table locations {
  id uuid [pk]
  organization_id uuid [not null, ref: > organizations.id]
  name text [not null]
  address text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table memberships {
  id uuid [pk]
  user_id uuid [not null, ref: > auth.users.id]
  organization_id uuid [not null, ref: > organizations.id]
  location_id uuid [ref: > locations.id]
  role app_role [not null, default: 'customer']
  created_at timestamptz [not null, default: `now()`]
  indexes {
    (user_id, organization_id, location_id) [unique]
  }
}

Table invites {
  id uuid [pk]
  organization_id uuid [not null, ref: > organizations.id]
  location_id uuid [ref: > locations.id]
  email text [not null]
  role app_role [not null, default: 'staff']
  invited_by uuid [not null, ref: > auth.users.id]
  token text [not null, unique]
  accepted_at timestamptz
  expires_at timestamptz [not null, default: `now() + 7 days`]
  created_at timestamptz [not null, default: `now()`]
}

Enum app_role {
  owner
  admin
  staff
  customer
}
